# EmpiricalAnalysisOfDataDrift

./: .gitignore  README.md  Synthetic Experiments Analysis.ipynb  experimental_results_tables.md  plot_bars.py  plot_metrics.py  pyproject.toml  synthetic_datasets_documentation.md  timing_documentation.md
codes/: HDDDM.py  KSDDM.py  common.py  comparisor.py  config.py  dataset_loader.py  ddm.py  drift_config.py  drift_generation.py  drift_info.py  drift_measures.py  experiment_timer.py  histogram_density_method_with_ks_and_js.py  ksddm_tester_dry.py  label_encoder.py  plots.py  synthetic_datasets.py  test_common.py  test_main.py  timing_analysis.py  utils.py
comparison_results/: README.md  consolidated_drift_results.json  consolidated_results.csv  drift_detection_results.csv  experiment_timing_results.json  timing_summary.csv
comparison_results/Abrupt (bal.)/: Abrupt (bal.)_results.csv
comparison_results/Abrupt (imbal.)/: Abrupt (imbal.)_results.csv
comparison_results/Incremental (bal.)/: Incremental (bal.)_results.csv
comparison_results/Incremental (imbal.)/: Incremental (imbal.)_results.csv
comparison_results/Incremental-abrupt-reoccurring (bal.)/: Incremental-abrupt-reoccurring (bal.)_results.csv
comparison_results/Incremental-abrupt-reoccurring (imbal.)/: Incremental-abrupt-reoccurring (imbal.)_results.csv
comparison_results/MULTISEA/: MULTISEA_results.csv
data/: magic.csv  magic_targets.csv
execution_time_analysis/: detailed_timing_data.csv  technique_analysis_report.md  technique_performance_summary.csv  timing_analysis_report.md
(+62 files in other folders)
